- fixed: increment/decrement Date/Time
- fixed: paths (~ char is changing the relative path to the absolute path)
- fixed: minifyHTML (<script>)
- fixed: SMTP authentification
- fixed: String.prototype.params()
- (IMPORTANT) fixed: WebSocket
- fixed: WebSocket (user, session, request)
- fixed: WebSocket routing
- fixed: utils.request()
- fixed: minifyJS
- fixed: minifyCSS

- removed: framework.config['directory-upload']
- removed: framework.verification()
- removed: framework.routeUpload()
- removed: controller.routeUpload()
- removed: controller.currentUpload()
- removed: @{currentUpload())
- removed: HttpFile.measure()

- (IMPORTANT) renamed: String.prototype.encode(value, key, [isUnique]) -> String.prototype.encrypt(value, key, [isUnique])
- (IMPORTANT) renamed: String.prototype.decode(value, key) -> String.prototype.decrypt(value, key)
- (IMPORTANT) renamed: framework.encode(value, key, [isUnique]) -> framework.encrypt(value, key, [isUnique])
- (IMPORTANT) renamed: framework.decode(value, key) -> framework.decrypt(value, key)
- (IMPORTANT) renamed: utils.htmlEncode() -> utils.encode()
- (IMPORTANT) renamed: utils.htmlDecode() -> utils.decode()
- (IMPORTANT) renamed: mail.on('sending') -> mail.on('send')

- improvements: compiling of views (fixed)
- example (add): https://github.com/petersirka/partial.js/tree/master/examples/request-to-response

======= 1.3.0-1

- updated: NoSQL version v2.0.3 (added new event on('load'))
- updated: debugging.js (watching of resources)
- updated: partial.js binary

- fixed: WebSocket dynamic routing
- fixed: Project directory (problem with clustered mode PM2 - https://github.com/Unitech/pm2)

======= 1.3.0

THIS VERSION IS RELEASE CANDIDATE 1 (RC 1)

- added: framework.config['default-ip'] (set the ip address from a configuration)
- added: framework.config['default-port'] (set the port from a configuration)
- added: framework.onRequest(req, res)
- added: framework.worker(name, [id], [timeout])
- added: framework.workers