@@ -73,6 +73,8 @@ IN DEVELOPMENT ======= 1.3.1
 - fixed: utils.request()
 - fixed: minifyJS
 - fixed: minifyCSS
+- fixed: FrameworkImage.sepia()
+- fixed: FrameworkImage.grayscale()
 
 - removed: framework.config['directory-upload']
 - removed: framework.verification()
